// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Site Footer EC Core renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row ecl-site-footer__row--specific"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--site-info"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__logo-link"
            href="/example"
          >
            <picture
              class="ecl-picture ecl-site-footer__picture"
            >
              <img
                alt="European Commission"
                class="ecl-site-footer__logo-image"
                src="/logo.svg#negative"
              />
            </picture>
          </a>
          <div
            class="ecl-site-footer__description"
          >
            This site is managed by:
            <br />
            [name of the manager of the site]
          </div>
        </div>
        <div
          class="ecl-site-footer__section ecl-site-footer__section--core"
        >
          <ul
            class="ecl-site-footer__list"
          >
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/about-european-commission_en"
              >
                About us
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/about-european-commission/contact_en"
              >
                Contact us
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Priorities
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Topics
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/funding-tenders_en"
              >
                Funding and tenders
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/jobs-european-commission_en"
              >
                Jobs
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://ec.europa.eu/commission/presscorner/home/en"
              >
                Press corner
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/events_en"
              >
                Events
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-site-footer__row ecl-site-footer__row--common"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--common"
        >
          <div
            class="ecl-social-media-follow ecl-social-media-follow--left ecl-social-media-follow--description_inline ecl-site-footer__social-media"
          >
            <p
              class="ecl-social-media-follow__description"
            >
              Follow us
            </p>
            <ul
              class="ecl-social-media-follow__list"
            >
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--instagram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Instagram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--x wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--x"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    X
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--linkedin wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Linkedin
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--telegram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Telegram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--chain wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Other
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <ul
            class="ecl-site-footer__list ecl-site-footer__list--inline"
          >
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="#"
              >
                Report an IT vulnerability
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/languages-our-websites_en"
              >
                Languages on our websites
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/cookies_en"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/privacy-policy_en"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/legal-notice_en"
              >
                Legal notice
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Accessibility
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer EC Core renders correctly with extra attributes 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row ecl-site-footer__row--specific"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--site-info"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__logo-link"
            href="/example"
          >
            <picture
              class="ecl-picture ecl-site-footer__picture"
            >
              <img
                alt="European Commission"
                class="ecl-site-footer__logo-image"
                src="/logo.svg#negative"
              />
            </picture>
          </a>
          <div
            class="ecl-site-footer__description"
          >
            This site is managed by:
            <br />
            [name of the manager of the site]
          </div>
        </div>
        <div
          class="ecl-site-footer__section ecl-site-footer__section--core"
        >
          <ul
            class="ecl-site-footer__list"
          >
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/about-european-commission_en"
              >
                About us
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/about-european-commission/contact_en"
              >
                Contact us
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Priorities
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Topics
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/funding-tenders_en"
              >
                Funding and tenders
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/jobs-european-commission_en"
              >
                Jobs
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://ec.europa.eu/commission/presscorner/home/en"
              >
                Press corner
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/events_en"
              >
                Events
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-site-footer__row ecl-site-footer__row--common"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--common"
        >
          <div
            class="ecl-social-media-follow ecl-social-media-follow--left ecl-social-media-follow--description_inline ecl-site-footer__social-media"
          >
            <p
              class="ecl-social-media-follow__description"
            >
              Follow us
            </p>
            <ul
              class="ecl-social-media-follow__list"
            >
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--instagram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Instagram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--x wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--x"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    X
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--linkedin wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Linkedin
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--telegram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Telegram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--chain wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Other
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <ul
            class="ecl-site-footer__list ecl-site-footer__list--inline"
          >
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="#"
              >
                Report an IT vulnerability
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/languages-our-websites_en"
              >
                Languages on our websites
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/cookies_en"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/privacy-policy_en"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/legal-notice_en"
              >
                Legal notice
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Accessibility
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer EC Core renders correctly with extra class names 1`] = `
<jest>
  <footer
    class="ecl-site-footer custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row ecl-site-footer__row--specific"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--site-info"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__logo-link"
            href="/example"
          >
            <picture
              class="ecl-picture ecl-site-footer__picture"
            >
              <img
                alt="European Commission"
                class="ecl-site-footer__logo-image"
                src="/logo.svg#negative"
              />
            </picture>
          </a>
          <div
            class="ecl-site-footer__description"
          >
            This site is managed by:
            <br />
            [name of the manager of the site]
          </div>
        </div>
        <div
          class="ecl-site-footer__section ecl-site-footer__section--core"
        >
          <ul
            class="ecl-site-footer__list"
          >
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/about-european-commission_en"
              >
                About us
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/about-european-commission/contact_en"
              >
                Contact us
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Priorities
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Topics
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/funding-tenders_en"
              >
                Funding and tenders
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/jobs-european-commission_en"
              >
                Jobs
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://ec.europa.eu/commission/presscorner/home/en"
              >
                Press corner
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/events_en"
              >
                Events
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ecl-site-footer__row ecl-site-footer__row--common"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--common"
        >
          <div
            class="ecl-social-media-follow ecl-social-media-follow--left ecl-social-media-follow--description_inline ecl-site-footer__social-media"
          >
            <p
              class="ecl-social-media-follow__description"
            >
              Follow us
            </p>
            <ul
              class="ecl-social-media-follow__list"
            >
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--instagram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Instagram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--x wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--x"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    X
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--linkedin wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Linkedin
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--telegram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Telegram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--chain wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Other
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <ul
            class="ecl-site-footer__list ecl-site-footer__list--inline"
          >
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="#"
              >
                Report an IT vulnerability
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/languages-our-websites_en"
              >
                Languages on our websites
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/cookies_en"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/privacy-policy_en"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/legal-notice_en"
              >
                Legal notice
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Accessibility
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer EC Harmonised renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row ecl-site-footer__row--specific"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--site-info"
        >
          <div
            class="ecl-site-footer__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__title-link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Site name
              </span>
              <span
                class="wt-icon--arrow-left wt-icon--inverted ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
              />
            </a>
          </div>
          <div
            class="ecl-site-footer__description"
          >
            This site is managed by:
            <br />
            [name of the manager of the site]
          </div>
          <div
            class="ecl-social-media-follow ecl-social-media-follow--left ecl-site-footer__social-media"
          >
            <ul
              class="ecl-social-media-follow__list"
            >
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--instagram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Instagram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--x wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--x"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    X
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--linkedin wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Linkedin
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--telegram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Telegram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--chain wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Other
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__section ecl-site-footer__section--links"
        >
          <div
            class="ecl-site-footer__row"
          >
            <div
              class="ecl-site-footer__section ecl-site-footer__section--contact"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Contact us  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Contact information of the DG
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="ecl-site-footer__section ecl-site-footer__section--about"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    About us  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Information about the DG
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Information about the DG
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="ecl-site-footer__row"
          >
            <div
              class="ecl-site-footer__section ecl-site-footer__section--more"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    More information on  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Class name 1
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Class name 2
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="ecl-site-footer__section ecl-site-footer__section--related"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Related links  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 1
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 2
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 3
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 4
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 5
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="ecl-site-footer__row"
          >
            <div
              class="ecl-site-footer__section ecl-site-footer__section--custom-1"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Custom links  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="ecl-site-footer__section ecl-site-footer__section--custom-2"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Custom links  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="ecl-site-footer__row"
          >
            <div
              class="ecl-site-footer__section ecl-site-footer__section--custom-3"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Custom links  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ecl-site-footer__row ecl-site-footer__row--common"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--common"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__logo-link"
            href="/example"
          >
            <picture
              class="ecl-picture ecl-site-footer__picture"
            >
              <img
                alt="European Commission"
                class="ecl-site-footer__logo-image"
                src="/logo.svg#negative"
              />
            </picture>
          </a>
          <div
            class="ecl-site-footer__extra-links-container"
          >
            <div
              class="ecl-social-media-follow ecl-social-media-follow--left ecl-social-media-follow--description_inline ecl-site-footer__social-media"
            >
              <p
                class="ecl-social-media-follow__description"
              >
                Follow the European Commission
              </p>
              <ul
                class="ecl-social-media-follow__list"
              >
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--telegram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      Telegram
                    </span>
                  </a>
                </li>
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--x wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--x"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      X
                    </span>
                  </a>
                </li>
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--mastodon wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--mastodon"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      Mastodon
                    </span>
                  </a>
                </li>
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--youtube wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--youtube"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      Youtube
                    </span>
                  </a>
                </li>
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--chain wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      Other
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <ul
              class="ecl-site-footer__list ecl-site-footer__list--inline"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission/contact_en"
                >
                  Contact
                </a>
              </li>
            </ul>
          </div>
          <ul
            class="ecl-site-footer__list ecl-site-footer__list--inline"
          >
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="#"
              >
                Report an IT vulnerability
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/languages-our-websites_en"
              >
                Languages on our websites
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/cookies_en"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/privacy-policy_en"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/legal-notice_en"
              >
                Legal notice
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Accessibility
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer EC Standardised renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row ecl-site-footer__row--specific"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--site-info"
        >
          <div
            class="ecl-site-footer__title"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__title-link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Site name
              </span>
              <span
                class="wt-icon--arrow-left wt-icon--inverted ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
              />
            </a>
          </div>
          <div
            class="ecl-site-footer__description"
          >
            This site is managed by:
            <br />
            [name of the manager of the site]
          </div>
          <div
            class="ecl-social-media-follow ecl-social-media-follow--left ecl-site-footer__social-media"
          >
            <ul
              class="ecl-social-media-follow__list"
            >
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--instagram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Instagram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--x wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--x"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    X
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--linkedin wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Linkedin
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--telegram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Telegram
                  </span>
                </a>
              </li>
              <li
                class="ecl-social-media-follow__item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--chain wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Other
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__section ecl-site-footer__section--links"
        >
          <div
            class="ecl-site-footer__row"
          >
            <div
              class="ecl-site-footer__section ecl-site-footer__section--contact"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Contact us  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Contact information of the DG
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="ecl-site-footer__section ecl-site-footer__section--about"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    About us  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Information about the DG
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Information about the DG
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="ecl-site-footer__row"
          >
            <div
              class="ecl-site-footer__section ecl-site-footer__section--more"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    More information on  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Class name 1
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Class name 2
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="ecl-site-footer__section ecl-site-footer__section--related"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Related links  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 1
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 2
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 3
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 4
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Related link 5
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="ecl-site-footer__row"
          >
            <div
              class="ecl-site-footer__section ecl-site-footer__section--custom-1"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Custom links  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="ecl-site-footer__section ecl-site-footer__section--custom-2"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Custom links  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="ecl-site-footer__row"
          >
            <div
              class="ecl-site-footer__section ecl-site-footer__section--custom-3"
            >
              <div
                class="ecl-site-footer__title"
              >
                
    Custom links  
              </div>
              <ul
                class="ecl-site-footer__list"
              >
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
                <li
                  class="ecl-site-footer__list-item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                    href="/example"
                  >
                    Custom link
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ecl-site-footer__row ecl-site-footer__row--common"
      >
        <div
          class="ecl-site-footer__section ecl-site-footer__section--common"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__logo-link"
            href="/example"
          >
            <picture
              class="ecl-picture ecl-site-footer__picture"
            >
              <img
                alt="European Commission"
                class="ecl-site-footer__logo-image"
                src="/logo.svg#negative"
              />
            </picture>
          </a>
          <div
            class="ecl-site-footer__extra-links-container"
          >
            <div
              class="ecl-social-media-follow ecl-social-media-follow--left ecl-social-media-follow--description_inline ecl-site-footer__social-media"
            >
              <p
                class="ecl-social-media-follow__description"
              >
                Follow the European Commission
              </p>
              <ul
                class="ecl-social-media-follow__list"
              >
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--telegram wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      Telegram
                    </span>
                  </a>
                </li>
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--x wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--x"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      X
                    </span>
                  </a>
                </li>
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--mastodon wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--mastodon"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      Mastodon
                    </span>
                  </a>
                </li>
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--youtube wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--youtube"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      Youtube
                    </span>
                  </a>
                </li>
                <li
                  class="ecl-social-media-follow__item"
                >
                  <a
                    class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link ecl-link--icon-only"
                    href="/example"
                  >
                    <span
                      class="wt-icon-networks--chain wt-icon--inverted ecl-icon ecl-icon--s ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
                    />
                    <span
                      class="ecl-link__label"
                    >
                      Other
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <ul
              class="ecl-site-footer__list ecl-site-footer__list--inline"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission/contact_en"
                >
                  Contact
                </a>
              </li>
            </ul>
          </div>
          <ul
            class="ecl-site-footer__list ecl-site-footer__list--inline"
          >
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="#"
              >
                Report an IT vulnerability
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/languages-our-websites_en"
              >
                Languages on our websites
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/cookies_en"
              >
                Cookies
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/privacy-policy_en"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="https://commission.europa.eu/legal-notice_en"
              >
                Legal notice
              </a>
            </li>
            <li
              class="ecl-site-footer__list-item"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                href="/example"
              >
                Accessibility
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer EU Core renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="/example"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-eu.svg"
                />
                <img
                  alt="European Union"
                  class="ecl-site-footer__logo-image"
                  src="/logo-mobile-eu.svg"
                />
              </picture>
            </a>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by: [name of the manager of the site]
            </div>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Contact the EU
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="tel:0080067891011"
                >
                  Call us 00 800 6 7 8 9 10 11
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/call-us_en"
                >
                  Use other telephone options
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/write-us_en"
                >
                  Write us via our contact form
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/meet-us_en"
                >
                  Meet us at one of the EU centres
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Social media
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/social-media-channels_en"
                >
                  Search for EU social media channels
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Legal
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/languages-our-websites_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/web-accessibility-policy_en"
                >
                  Accessibility
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              EU institutions and bodies
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/institutions-law-budget/institutions-and-bodies/search-all-eu-institutions-and-bodies_en"
                >
                  Search all EU institutions and bodies
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer EU Harmonised renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--site-info"
          >
            <div
              class="ecl-site-footer__title"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-site-footer__title-link"
                href="/example"
              >
                <span
                  class="ecl-link__label"
                >
                  Site name
                </span>
                <span
                  class="wt-icon--arrow-left ecl-icon ecl-icon--s ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
                />
              </a>
            </div>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by: [name of the manager of the site]
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Accessibility statement
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Contact site name
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Follow us
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--facebook ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-networks--facebook"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Social 1
                  </span>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--twitter ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-networks--twitter"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Social 2
                  </span>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <span
                    class="wt-icon-networks--mastodon ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-networks--mastodon"
                  />
                  <span
                    class="ecl-link__label"
                  >
                    Social 3
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Optional links
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link 1
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link 2
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link 3
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link 4
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="/example"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-eu.svg"
                />
                <img
                  alt="European Union"
                  class="ecl-site-footer__logo-image"
                  src="/logo-mobile-eu.svg"
                />
              </picture>
            </a>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Discover more on europa.eu
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Contact the EU
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Call us 00 800 6 7 8 9 10 11
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Use other telephone options
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Write us via our contact form
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Meet us at one of the EU centres
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Social media
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Search for EU social media channels
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Legal
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/languages-our-websites_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/web-accessibility-policy_en"
                >
                  Accessibility
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <div
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              EU institutions and bodies
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/institutions-law-budget/institutions-and-bodies/search-all-eu-institutions-and-bodies_en"
                >
                  Search all EU institutions and bodies
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;
